--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "homepage": "https://NatalaBoiko.github.io/goit-js-hw-11",
   "scripts": {
-    "dev": "parcel src/*.html --open",
+    "dev": "parcel src/*.html ",
     "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
   },
   "repository": {
@@ -24,5 +24,10 @@
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.10.3"
   }
 }
